--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
   },
   "author": "Cozy Cloud <contact@mycozycloud.com> (http://mycozycloud.com)",
   "contributors": [],
-  "engines": {
-    "node": ">= 0.6",
-    "npm": ">= 1.1"
-  },
+  "engines": { "node": "*" },
   "main": "./main.js",
   "dependencies": {
     "request": "2.11.1"
