add travis configuration file

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/mycozycloud/request-json/issues"
   },
-  "author": "Cozy Cloud <contact@mycozycloud.com> (http://mycozycloud.com)",
+  "author": "Cozy Cloud <contact@cozycloud.cc> (http://cozycloud.cc)",
   "contributors": [],
   "engines": {
     "node": "*"
