--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "coffee-script": "*",
     "express": "*",
     "chai": "*"
+    "mocha": "*"
   },
   "scripts": {
     "prepublish": "cake build",
