add Stephen to contributors

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "Dario Kondratiuk",
     "Frank Rousseau",
     "Fábio Santos",
+    "Stephen Tweeddale",
     "Benjamin Woodruff"
   ],
   "engines": {
