Removed aug dependency.

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "main": "./main.js",
   "dependencies": {
-    "request": "2.34.0",
-    "aug": "0.1.0"
+    "request": "2.34.0"
   },
   "devDependencies": {
     "coffee-script": "*",
