add Alan Plum to the list of contributors

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "Romain Foucault",
     "Dario Kondratiuk",
     "Frank Rousseau",
+    "Alan Plum",
     "Fábio Santos",
     "Stephen Tweeddale",
     "Benjamin Woodruff"
