--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "request": "2.34.0"
   },
   "devDependencies": {
-    "coffee-script": "*",
-    "express": "*",
-    "chai": "*",
-    "mocha": "*"
+    "coffee-script": "1.7.1",
+    "express": "4.3.1",
+    "mocha": "1.19.0",
+    "chai": "1.9.1",
+    "body-parser": "1.2.1",
+    "connect-multiparty": "1.0.4"
   },
   "scripts": {
     "prepublish": "cake build",
