add David Neal to the contributor list

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "Zoe Bellot",
     "Romain Foucault",
     "Dario Kondratiuk",
+    "David Neal",
     "Frank Rousseau",
     "Alan Plum",
     "Fábio Santos",
