add NickH-nz to contributors

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "Romain Foucault",
     "Dario Kondratiuk",
     "David Neal",
+    "NickH-nz",
     "Frank Rousseau",
     "Alan Plum",
     "Fábio Santos",
