add Googloid to contributors

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "contributors": [
     "Zoe Bellot",
     "Romain Foucault",
+    "Googoid",
     "Dario Kondratiuk",
     "David Neal",
     "NickH-nz",
