--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "coffeelint": "1.15.7",
     "connect-multiparty": "2.0.0",
     "express": "4.13.4",
+    "lie": "3.0.4",
     "mocha": "2.4.5"
   },
   "scripts": {
