[contrib] Add Fedor Shubin as contributor

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "NickH-nz",
     "Frank Rousseau",
     "Alan Plum",
+    "Fedor Shubin",
     "Fábio Santos",
     "Stephen Tweeddale",
     "Benjamin Woodruff"
