--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   ],
   "license": "MIT",
   "version": "0.6.4",
-  "homepage": "https://github.com/mycozycloud/request-json/",
+  "homepage": "https://github.com/hackerevents/request-json/",
   "bugs": {
-    "url": "https://github.com/mycozycloud/request-json/issues"
+    "url": "https://github.com/hackerevents/request-json/issues"
   },
-  "author": "Cozy Cloud <contact@cozycloud.cc> (http://cozycloud.cc)",
+  "author": "Frank Roussau <frank@addictedtointer.net>",
   "contributors": [
     "Zoe Bellot",
     "Romain Foucault",
@@ -59,7 +59,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mycozycloud/request-json.git"
+    "url": "git://github.com/hackervents/request-json.git"
   },
   "optionalDependencies": {}
 }
